Fix spacing

--- a/public/customStyle.css
+++ b/public/customStyle.css
@@ -3,7 +3,7 @@
 /* overrides default Tailwind styles */
 
 #mainSection {
-    min-height: 90vh !important;
+    min-height: 94vh !important;
 }
 
 .marker {
@@ -42,7 +42,7 @@
 }
 
 .navbar {
-    min-height: 10vh;
+    min-height: 6vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
